[ppc, s390] CRC32C: wrong checksum result in some cases

XMLWordPrintable

    • 10
    • b21
    • ppc, s390x
    • generic
    • Verified

      The newly introduced CRC32C intrinsics unfortunately calculate a bad checksum, if
       * the passed-in byte array has an offset != 0
       * the intrinsic implementation is called via the interpreter or via a c1-compiled method.

      Reason:
      in contrast to the CRC32 intrinsics, the CRC32C intrinsics receive an end-index parameter instead of a length parameter. The length has to be calculated by the intrinsic as (endIndex - offset). This subtraction was simply forgotten.

            Assignee:
            Lutz Schmidt
            Reporter:
            Lutz Schmidt
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: