8176580: [ppc, s390] CRC32C: wrong checksum result in some cases

Reviewed-by: simonis, mdoerr